// Vitest Snapshot v1

exports[`umami <PageListTemplate /> > should render with umami profile pages 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
       
      <header
        class="prose text-2xl mx-auto mt-20"
      >
        <h1
          class="text-center mx-auto"
        >
          Pages
        </h1>
      </header>
      <div
        class="mt-12 mx-auto max-w-[50vw]"
      >
        <ul>
          <li
            class="prose justify-items-start mt-8"
          >
            <h2>
              About Umami
            </h2>
            <div />
            <a
              class="font-normal underline"
              href="/about-umami"
            >
              Read more →
            </a>
          </li>
          <li
            class="prose justify-items-start mt-8"
          >
            <h2>
              Top Level Page
            </h2>
            <div />
            <a
              class="font-normal underline"
              href="/about"
            >
              Read more →
            </a>
          </li>
          <li
            class="prose justify-items-start mt-8"
          >
            <h2>
              Nested Top Level Page
            </h2>
            <div />
            <a
              class="font-normal underline"
              href="/nested/page"
            >
              Read more →
            </a>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`umami <PageTemplate /> > should render with umami profile page 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen max-h-screen min-w-screen max-w-screen flex flex-col"
  >
    <div
      class="my-0 pt-10 px-5 text-xl"
    >
      <nav>
        <ul
          class="flex flex-row flex-wrap sm:flex-nowrap list-none justify-between max-w-screen-sm mx-auto"
        >
          <li
            class="mr-auto"
          >
            <a
              class="hover:underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="mx-4"
          >
            <a
              class="hover:underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="mb-auto"
    >
      <article
        class="prose lg:prose-xl mt-10 mx-auto"
      >
        <h1>
          About Umami
        </h1>
        <a
          class="font-normal"
          href="/pages"
        >
          Pages →
        </a>
        <div
          class="mt-12 max-w-lg mx-auto lg:grid-cols-3 lg:max-w-screen-lg"
        >
          <div>
            <p>
              Umami is a fictional food magazine that has been created to demonstrate how you might build a Drupal site using functionality provided 'out of the box'.
            </p>
            <p>
              For more information visit 
              <a
                href="https://www.drupal.org/docs/umami-drupal-demonstration-installation-profile"
              >
                https://www.drupal.org/docs/umami-drupal-demonstration-installation-profile
              </a>
              .
            </p>
          </div>
        </div>
      </article>
    </main>
    <footer
      class="w-full text-white bg-black p-4 mt-12"
    >
      <nav
        class="flex flex-col max-w-lg mx-auto lg:max-w-screen-lg"
      >
        <ul>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="list-disc text-blue-300 ml-3"
          >
            <a
              class="text-blue-300 hover:underline hover:text-blue-100 focus:text-purple-600 active:text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="flex my-4 p-2"
      >
        <span
          class="mx-auto"
        >
          © 2022 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
